2009-12-08  Phil Muldoon  <pmuldoon@redhat.com>

PR python/10804

	* python/py-type.c (typy_range): New Function.

2009-12-08  Phil Muldoon  <pmuldoon@redhat.com>

	* gdb.python/py-type.exp (test_range): New test.


2009-12-08  Phil Muldoon  <pmuldoon@redhat.com>

	* gdb.texinfo (Types In Python): Describe range function.